[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/debug/CustomerFactoryDebugScreen.gd" type="Script" id=1]

[node name="CustomerFactoryDebugScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1020.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 250.0
margin_top = 200.0
margin_right = 770.0
margin_bottom = 400.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="CenterContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer"]
margin_left = 220.0
margin_top = 93.0
margin_right = 520.0
margin_bottom = 107.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateCustomer" type="Button" parent="."]
margin_left = 435.367
margin_top = 144.117
margin_right = 568.367
margin_bottom = 164.117
text = "generate customer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="currentDate" type="Label" parent="."]
margin_left = 485.416
margin_top = 108.54
margin_right = 525.416
margin_bottom = 122.54
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrderPlaced" type="Button" parent="."]
margin_left = 253.864
margin_top = 419.689
margin_right = 345.864
margin_bottom = 439.689
text = "order placed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeliverPizza" type="Button" parent="."]
margin_left = 364.213
margin_top = 418.483
margin_right = 457.213
margin_bottom = 438.483
text = "deliver pizza"
__meta__ = {
"_edit_use_anchors_": false
}
